GNOME Bugzilla – Bug 747993
videoaggregator: fix caps leak when early returning
Last modified: 2015-04-17 13:46:30 UTC
.
Created attachment 301726 [details] [review] videoaggregator: fix caps leak when early returning https://bugzilla.gnome.org/show_bug.cgi?id=747993 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
commit 89e2a5fe755b6dcf2f013ba87ac43c447da9599a Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Thu Apr 16 14:17:04 2015 +0200 videoaggregator: fix caps leak when early returning https://bugzilla.gnome.org/show_bug.cgi?id=747993 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>